--- a/example/index.html
+++ b/example/index.html
@@ -18,11 +18,14 @@
     <script type="importmap">
       {
         "imports": {
-          "hello-csv": "https://cdn.jsdelivr.net/npm/hello-csv@0.1.1/dist/bundled/index.es.js"
+          "hello-csv": "https://cdn.jsdelivr.net/npm/hello-csv@0.1.2/dist/bundled/index.es.js"
         }
       }
     </script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/hello-csv@0.1.1/dist/bundled/hello-csv.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/hello-csv@0.1.2/dist/bundled/hello-csv.css"
+    />
   </head>
   <body>
     <div id="app"></div>
