make adaptable to project

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script type="module">
       import { renderImporter } from 'hello-csv';
+      import { CONTACT_SHEET_DEFINITION } from 'hello-csv/constants';
 
       const onComplete = async (data, onProgress) => {
         await new Promise((resolve) => setTimeout(resolve, 200));
@@ -38,68 +39,7 @@
 
         try {
           renderImporter(appElement, {
-            sheets: [
-              {
-                id: 'employees',
-                label: 'Employees',
-                columns: [
-                  {
-                    label: 'Employee ID',
-                    id: 'employee_id',
-                    type: 'number',
-                    validators: [
-                      { validate: 'required' },
-                      {
-                        validate: 'unique',
-                        error: 'This employee ID is not unique',
-                      },
-                      {
-                        validate: 'is_integer',
-                        error: 'This value must be a number',
-                      },
-                    ],
-                  },
-                  {
-                    label: 'Email',
-                    id: 'email',
-                    type: 'string',
-                    validators: [
-                      { validate: 'required' },
-                      { validate: 'unique', error: 'This email is not unique' },
-                      {
-                        validate: 'email',
-                        error: 'This email is not valid',
-                      },
-                    ],
-                  },
-                  {
-                    label: 'Phone Number',
-                    id: 'phone_number',
-                    type: 'string',
-                    validators: [{ validate: 'required' }],
-                  },
-                  {
-                    label: 'Address',
-                    id: 'address',
-                    type: 'string',
-                    validators: [{ validate: 'required' }],
-                  },
-                  { label: 'City', id: 'city', type: 'string' },
-                  {
-                    label: 'State',
-                    id: 'state',
-                    type: 'string',
-                    transformers: [{ transformer: 'state_code' }],
-                  },
-                  {
-                    label: 'Zip Code',
-                    id: 'zip_code',
-                    type: 'string',
-                    validators: [{ validate: 'required' }],
-                  },
-                ],
-              },
-            ],
+            sheets: CONTACT_SHEET_DEFINITION,
             onDataColumnsMapped: (dataColumns) => {
               console.log('Data columns mapped:', dataColumns);
               return dataColumns;
